--- a/.tmux.conf
+++ b/.tmux.conf
@@ -16,6 +16,16 @@ set-option -sg escape-time 10
 set-option -g focus-events on
 
 
+# Toggle mouse on
+bind-key M \
+  set-option -g mouse on \;\
+  display-message 'Mouse: ON'
+
+# Toggle mouse off
+bind-key m \
+  set-option -g mouse off \;\
+  display-message 'Mouse: OFF'
+
 # copy to system keyboard
 bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
 
