--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,8 +5,8 @@ NNN_FIFO="/tmp/nnn.fifo"
 
 %if "#{==:#{host},MacBook-Air-Daniil.local}"
 set -g status-style bg=#4060a0
-%elif "#{==:#{host},myotherhost}"
-set -g status-style bg=#87d75f
+%elif "#{==:#{host},steamdeck}"
+set -g status-style bg=#4060a0
 %else
 set -g status-style bg=#ff2026
 %endif
