--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@ set-option -g status-style bg=#3e3e3e
 NNN_PLUG="x:!chmod +x $nnn;p:preview-tui"
 NNN_FIFO="/tmp/nnn.fifo"
 
-%if "#{==:#{host},MacBook-Air-Daniil.local}"
+%if "#{==:#{host},i3Cheese-MacBook.local}"
 set -g status-style bg=#4060a0
 %elif "#{==:#{host},steamdeck}"
 set -g status-style bg=#4060a0
