--- a/.tmux.conf
+++ b/.tmux.conf
@@ -26,25 +26,19 @@ bind-key m \
   set-option -g mouse off \;\
   display-message 'Mouse: OFF'
 
+bind  %  split-window -h -c "#{pane_current_path}"
+bind '"' split-window -v -c "#{pane_current_path}"
+
 # copy to system keyboard
-bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "pbcopy"
+bind -T copy-mode-vi Enter send-keys -X copy-pipe-and-cancel "copy"
 
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-battery'
-set -g @plugin 'xamut/tmux-network-bandwidth' # brew install gawk coreutils
 #
 #
-set-option -g @tmux-weather-interval 15
-set-option -g @tmux-weather-location "Moscow"
-set-option -g @tmux-weather-format "%l:+%c+%t(%f)+%w"
-set -g @plugin 'xamut/tmux-weather'
-set -g status-interval 5
-BATTERY='#{battery_icon_status} #{battery_percentage} #{battery_remain}'
-set -g status-right-length 600
-set -g status-right "$BATTERY | %a %h-%d %H:%M | #{network_bandwidth}"
+set -g status-right "%a %h-%d %H:%M"
 
 # {
 #   baby_pink = "#DB5C00",
